# senao

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  template.env
alembic/: env.py
alembic/versions/: 58968ade7bb0_init_database.py  a76bf4be65c1_init_database.py
app/: lifespan.py  main.py
app/apis/: __init__.py
app/apis/routes/: urls.py
app/apis/utils/: utils.py
app/core/: config.py
app/core/database/: __init__.py  helpers.py  initial.py
app/models/: common.py  databases.py  generic.py  urls.py  users.py
